# noesium

./: .gitignore  .platonic.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  concat-specs.sh  env.all.example  env.dashscope  env.example  env.ollama  env.openai  env.openrouter  pyproject.toml  skills-lock.json
.claude/skills/: platonic-code-review  platonic-impl  platonic-init  platonic-specs  platonic-workflow
.github/workflows/: ci.yml  release.yml
coder-backend/: pyproject.toml
coder-backend/src/noecoder/: __init__.py  main.py
coder-backend/src/noecoder/api/: __init__.py  tasks.py  websocket.py
coder-backend/src/noecoder/models/: __init__.py  events.py  repository.py  task.py
coder-backend/src/noecoder/services/: __init__.py  git_client.py  session_manager.py  state_manager.py  task_orchestrator.py
coder-backend/src/noecoder/utils/: __init__.py
coder-frontend/: index.html  package.json  vite.config.ts
coder-frontend/src/: App.tsx
deploy/searxng/: Caddyfile  docker-compose.yml  settings.yml
docs/: conf.py  dev_guide.md  index.rst  noeagent_guide.md  quick_guide.md  quick_guide_noeagent.md  quick_guide_noesium.md  quick_guide_voyager.md  toolkit_configuration_guide.md
docs/drafts/: README.md  more-subagentes-proposal.md
docs/impl/: README.md  agent-framework-impl.md  alithia-agent-impl.md  coder-impl.md  core-agent-framework-impl.md  core-framework-impl.md  gap-analysis.md  goalith-deprecation-impl.md  graph-memory-provider-impl.md  new-specs-gap-analysis.md  noe-agent-config-system.md  noe-agent-impl.md  noe-subagent-integration.md  noe-tools-and-subagent-integration.md  noeagent-config-system.md  noeagent-impl.md  noeagent-perf-opt.md  noeagent-rfc-gap-analysis.md  noeagent-tool-vs-subagent.md  noeagent-tui-analysis.md  opensandbox-vs-firecracker.md  rfc0005-gap-analysis.md
docs/plans/: plan-2026-03-08-001.md  plan-noeagent-optimized-structure.md
docs/specs/: RFC-0001.md  RFC-0003.md  RFC-0004.md  RFC-0005.md  RFC-0006.md  RFC-1001.md  RFC-1002.md  RFC-1003.md  RFC-1004.md  RFC-1005.md  RFC-1006.md  RFC-1007.md  RFC-1008.md  RFC-1009.md  RFC-1010.md  RFC-1101.md  RFC-1201.md  RFC-2001.md  RFC-2002.md  RFC-2003.md  RFC-2004.md  RFC-2101.md  RFC-2102.md  RFC-2103.md  RFC-9000.md  RFC-9001.md  RFC-9003.md  RFC-9004.md  logic-consistency-review.md  noesium-deepagents-openagents.md  rfc-history.md  rfc-index.md  rfc-namings.md  rfc-renumbering-map.md  rfc-standard.md  validation-report.md
docs/user_guides/: dev_guide.md  quick_guide_noeagent.md  quick_guide_noesium.md
docs/worklogs/: _template.md  progress-2026-03-02-001.md  progress-2026-03-02-002.md  progress-2026-03-02-003.md  progress-2026-03-02-004.md  progress-2026-03-03-001.md  progress-2026-03-03-002.md  progress-2026-03-03-003.md  progress-2026-03-03-004.md  progress-2026-03-04-001.md  progress-2026-03-04-002.md  progress-2026-03-04-003.md  progress-2026-03-04-004.md  progress-2026-03-04-005.md  progress-2026-03-04-006.md  progress-2026-03-04-007.md  (+27 more)
noeagent/: README.md  pyproject.toml
noeagent/examples/: noe_demo.py
noeagent/src/noeagent/: __init__.py  __main__.py  agent.py  cli_adapter.py  commands.py  config.py  example_config.json  planner.py  session_log.py  state.py  subagent_runtimes.py  tui.py
noeagent/src/noeagent/autonomous/: __init__.py  cognitive_loop.py  decision_schema.py  event_processor.py  event_queue.py  event_replay.py  event_sources.py  event_system.py  goal_engine.py  goal_events.py  models.py  runner.py  trigger.py
noeagent/src/noeagent/autonomous/events/: __init__.py
noeagent/src/noeagent/autonomous/events/sources/: __init__.py  base.py  memory_observer.py  tool_observer.py
noeagent/src/noeagent/autonomous/goal_engine/: __init__.py  engine.py  transitions.py
noeagent/src/noeagent/autonomous/kernel/: __init__.py  agent_kernel.py  reasoning_chain.py
noeagent/src/noeagent/autonomous/memory/: __init__.py  projector.py
noeagent/src/noeagent/capabilities/: __init__.py  subagents.py  tools.py
noeagent/src/noeagent/graph/: __init__.py  builder.py  nodes.py  routing.py
noeagent/src/noeagent/kernel/: README.md  __init__.py  core.py
noeagent/src/noeagent/legacy/: __init__.py  gem_parser.py
noeagent/src/noeagent/prompts/: README.md  __init__.py  agent_system.md
noeagent/tests/: benchmark_noe_agent.py  test_autonomous_complete.py  test_context_integration.py  test_gem_parser.py  test_llm_warmup.py  test_noe_agent.py  test_noe_taskplan_and_local_tools.py  test_noe_taskplan_and_tui.py  test_noeagent_prompts.py
noeagent/tests/integration/: test_config_integration.py  test_noe_agent_library_mode.py  test_noe_subagent_integration.py  test_toolkit_config_integration.py
noesium/: README.md  __init__.py  pyproject.toml
scripts/: check_chrome.sh  download_model.py  setup_dev.sh  validate_ci.sh
specs/: RFC-0005.md  RFC-0006.md  RFC-1002.md  RFC-1003.md  RFC-2001.md  RFC-2004.md  rfc-0001.md  rfc-0002.md  rfc-0003.md  rfc-0004.md  rfc-history.md  rfc-index.md  rfc-namings.md  rfc-specifications.md
tests/: README.md  conftest.py  docker-compose.yml  test_noeagent_prompts.py
voyager/: README.md
(+694 files in other folders)
