[project]
name = "noesium-workspace"
version = "0.0.0"
description = "Monorepo workspace for noesium framework and applications"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "noesium",
    "noeagent",
    "voyager/backend",
]

[tool.uv.sources]
noesium = { workspace = true }
noeagent = { workspace = true }
noecoder = { workspace = true }