[project]
name = "noesium-workspace"
version = "0.0.0"
description = "Monorepo workspace for noesium framework and applications"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "noesium",
    "noeagent",
]

[tool.uv.sources]
noesium = { workspace = true }
noeagent = { workspace = true }

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Late/conditional imports for optional deps, lazy loading, or sys.path manipulation
"noesium/src/noesium/__init__.py" = ["E402"]
"noesium/src/noesium/toolkits/__init__.py" = ["E402"]
"noesium/src/noesium/subagents/__init__.py" = ["E402"]
"noesium/src/noesium/core/toolify/mcp_integration.py" = ["E402"]
"noesium/src/noesium/core/memory/memu/llm_adapter.py" = ["E402"]
"noesium/src/noesium/subagents/bu/agent/__init__.py" = ["E402"]
"noesium/src/noesium/subagents/bu/agent/service.py" = ["E402"]
"noesium/src/noesium/subagents/bu/tokens/service.py" = ["E402"]
"noesium/tests/**/*.py" = ["E402"]
"noeagent/src/noeagent/__init__.py" = ["E402"]
"noeagent/src/noeagent/config.py" = ["E402"]
"noeagent/src/noeagent/tui.py" = ["E402"]
"noeagent/tests/**/*.py" = ["E402"]
"examples/**/*.py" = ["E402"]
"noeagent/src/**/*.py" = ["E402"]